--- a/stylesheets/O2_Organismes/O_Menubar.css
+++ b/stylesheets/O2_Organismes/O_Menubar.css
@@ -8,4 +8,9 @@
   align-items: center;
   border: 1px solid rgba(0,0,0,.1);
   box-sizing: border-box;
+  padding: 0 20px;
+}
+
+.O_Menubar a {
+
 }
