--- a/stylesheets/O2_Organismes/O_SidebarFooter.css
+++ b/stylesheets/O2_Organismes/O_SidebarFooter.css
@@ -5,6 +5,7 @@
   height: 80px;
   border: 1px solid rgba(0,0,0,.1);
   box-sizing: border-box;
+  padding: 20px 0;
 }
 
 .T_SinglePageUI .O_SidebarFooter a {
