--- a/stylesheets/O2_Organismes/O_Content.css
+++ b/stylesheets/O2_Organismes/O_Content.css
@@ -1,14 +1,7 @@
-.O_ContentWrapper .O_Content {
-  position: fixed;
-  top: 120px;
-  width: 1380px;
-  height: 777px;
+.O_Content {
+  width: 100%;
+  height: 100%;
   overflow: scroll;
-  border: 1px solid rgba(0,0,0,.1);
+  padding: 152px 0 71px;
   box-sizing: border-box;
-}
-
-.O_ContentWrapper .O_Content p {
-  margin: 20px 20px;
-  line-height: 38px;
 }
