--- a/stylesheets/O2_Organismes/O_ContentFooter.css
+++ b/stylesheets/O2_Organismes/O_ContentFooter.css
@@ -1,10 +1,9 @@
-.O_ContentWrapper .O_ContentFooter {
+.O_ContentFooter {
   position: fixed;
-  width: 1380px;
-  height: 80px;
+  width: 100%;
+  height: 70px;
   bottom: 0;
-  background-color: lightgreen;
-  border: 1px solid rgba(0,0,0,.1);
-  box-sizing: border-box;
-  padding: 20px;
+  border-top: 1px solid rgba(0,0,0,.1);
+  background-color: white;
+  z-index: 10;
 }
