--- a/stylesheets/O2_Organismes/O_ContentWrapper.css
+++ b/stylesheets/O2_Organismes/O_ContentWrapper.css
@@ -1,10 +1,9 @@
 .O_ContentWrapper {
   position: fixed;
-  width: 1380px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   height: 100%;
-  top: 0px;
   left: 300px;
   border: 1px solid rgba(0,0,0,.1);
-  box-sizing: border-box;
-  overflow: hidden;
 }
