--- a/stylesheets/O2_Organismes/O_Homebar.css
+++ b/stylesheets/O2_Organismes/O_Homebar.css
@@ -1,17 +1,6 @@
 .T_SinglePageUI .O_Sidebar .O_Homebar {
-position: fixed;
-top: 0;
-left: 0;
-width: 300px;
-height: 50px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 0 20px;
-/* background-color: white; */
-}
+width: 100%;
 
-.T_SinglePageUI .O_Sidebar .O_Homebar {
-  border-bottom: solid 1px rgba(0,0,0,.1);
-  box-sizing: border-box;
+flex: 0 0 80px;
+border-bottom: 1px solid rgba(0,0,0,.1);
 }
