--- a/stylesheets/O2_Organismes/O_Sidebar.css
+++ b/stylesheets/O2_Organismes/O_Sidebar.css
@@ -1,7 +1,11 @@
 .T_SinglePageUI .O_Sidebar {
   position: fixed;
+  display: flex;
+  flex-direction: column;
   width: 300px;
   height: 100%;
-  border: 1px solid rgba(0,0,0,.1);
+  border-right: 1px solid rgba(0,0,0,.1);
+  background-color: white;
+  z-index: 100;
   box-sizing: border-box;
 }
