--- a/stylesheets/O2_Organismes/O_SidebarFooter.css
+++ b/stylesheets/O2_Organismes/O_SidebarFooter.css
@@ -1,11 +1,9 @@
 .T_SinglePageUI .O_SidebarFooter {
-  position: fixed;
-  bottom: 0;
-  width: 300px;
-  height: 80px;
-  border: 1px solid rgba(0,0,0,.1);
-  box-sizing: border-box;
-  padding: 20px 0;
+  width: 100%;
+  /* display: flex; */
+  flex: 0 0 70px;
+  border-top: 1px solid rgba(0,0,0,.1);
+  z-index: 10;
 }
 
 .T_SinglePageUI .O_SidebarFooter a {
