--- a/stylesheets/O2_Organismes/O_UserMenu.css
+++ b/stylesheets/O2_Organismes/O_UserMenu.css
@@ -1,8 +1,7 @@
-/* .O_UserMenu {
+.O_UserMenu {
 width: 53px;
 height: 53px;
 margin-right: 50px;
 background-image: url(../images/user.svg);
 background-size: cover;
-
-} */
+}
