--- a/stylesheets/O2_Organismes/O_Content.css
+++ b/stylesheets/O2_Organismes/O_Content.css
@@ -1,7 +1,7 @@
 .O_Content {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
-  overflow: scroll;
-  padding: 152px 0 71px;
-  box-sizing: border-box;
+  padding-top: 152px;
+  padding-bottom: 71px;
 }
