--- a/stylesheets/O2_Organismes/O_ContentFooter.css
+++ b/stylesheets/O2_Organismes/O_ContentFooter.css
@@ -1,9 +1,9 @@
 .O_ContentFooter {
   position: fixed;
-  width: 100%;
-  height: 70px;
   bottom: 0;
-  border-top: 1px solid rgba(0,0,0,.1);
-  background-color: white;
+  width: calc(100% - 300px);
+  height: 70px;
+  background-color: #fff;
+  border-top: 1px solid var(--gray);
   z-index: 10;
 }
