--- a/stylesheets/O2_Organismes/O_ContentWrapper.css
+++ b/stylesheets/O2_Organismes/O_ContentWrapper.css
@@ -1,9 +1,6 @@
 .O_ContentWrapper {
-  position: fixed;
-  display: flex;
-  flex-direction: column;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
-  left: 300px;
-  border: 1px solid rgba(0,0,0,.1);
+  padding-left: 300px;
 }
