--- a/stylesheets/O2_Organismes/O_SearchBar.css
+++ b/stylesheets/O2_Organismes/O_SearchBar.css
@@ -1,5 +1,4 @@
 .O_SearchBar {
-  /* width: 100%; */
   height: 70px;
-  border: 1px solid rgba(0,0,0,.1);
+  border-bottom: 1px solid var(--gray);
 }
