--- a/stylesheets/O2_Organismes/O_SidebarFooter.css
+++ b/stylesheets/O2_Organismes/O_SidebarFooter.css
@@ -1,11 +1,6 @@
-.T_SinglePageUI .O_SidebarFooter {
+.O_SidebarFooter {
   width: 100%;
-  /* display: flex; */
   flex: 0 0 70px;
-  border-top: 1px solid rgba(0,0,0,.1);
+  border-top: 1px solid var(--gray);
   z-index: 10;
-}
-
-.T_SinglePageUI .O_SidebarFooter a {
-  margin-left: 20px;
 }
