--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,28 +1,16 @@
-body {
+:root {
+  --black: #333;
+  --primary: #0080ff;
+  --bg-gray: #f5f5f5;
+  --gray: #e6e6e6;
+}
+
+html, body {
   width: 100%;
   height: 100%;
-  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 a {
-  font-size: 18px;
-}
-
-a {
-  color: #686868;
   text-decoration: none;
-  cursor: pointer;
-}
-
- a:hover {
-  font-weight: bold;
-  text-decoration: none;
-  color: #3b87f4;
-}
-
-figure {
-  width: 53px;
-  height: 53px;
-  margin-right: 50px;
-  background-size: cover;
+  color: inherit;
 }
