--- a/stylesheets/O3_Molecules/M_UserMenuDropdown.css
+++ b/stylesheets/O3_Molecules/M_UserMenuDropdown.css
@@ -27,3 +27,29 @@
 .O_UserMenu:hover .M_UserMenuDropdown {
   display: block;
 }
+
+.M_UserMenuDropdown::after,
+.M_UserMenuDropdown::before {
+  bottom: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.M_UserMenuDropdown::after {
+  border-color: rgba(136, 183, 213, 0);
+  border-bottom-color: white;
+  border-width: 18px;
+  margin-left: 24px;
+}
+
+.M_UserMenuDropdown::before {
+  border-color: rgba(194, 225, 245, 0);
+  border-bottom-color: var(--gray);
+  border-width: 20px;
+  margin-left: 22px;
+}
