--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,5 @@
 @import "reset.css";
-@import "layout.css";
+@import "basic.css";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 
 @import "OO_Templates/T_SinglePageUI.css";
@@ -15,9 +15,19 @@
 @import "O2_Organismes/O_Content.css";
 @import "O2_Organismes/O_ContentFooter.css";
 @import "O2_Organismes/O_UserMenu.css";
+@import "O2_Organismes/O_MenuItem.css";
+@import "O2_Organismes/O_LastMenu.css";
+@import "O2_Organismes/O_LastMenuItem.css";
+
 
 @import "O3_Molecules/M_UserMenuDropdown.css";
+@import "O3_Molecules/M_Submenu.css";
+@import "O3_Molecules/M_FooterButton.css";
 
 @import "O4_Atoms/A_MenubarLink.css";
 @import "O4_Atoms/A_UserIcon.css";
 @import "O4_Atoms/A_DropdownMenuItem.css";
+@import "O4_Atoms/A_MenuItemButtom.css";
+@import "O4_Atoms/A_SubmenuItem.css";
+@import "O4_Atoms/A_FooterItem.css";
+@import "O4_Atoms/A_LastMenuItemButton.css";
