--- a/stylesheets/O3_Molecules/M_Submenu.css
+++ b/stylesheets/O3_Molecules/M_Submenu.css
@@ -10,14 +10,14 @@
 }
 
 .M_Submenu {
-  -webkit-transition: all 1s;
-    -moz-transition: all 1s;
-    -ms-transition: all 1s;
-    -o-transition: all 1s;
-    transition: all 1s;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
 
-    max-height: 0;
-    display: block;
-    overflow: hidden;
-    opacity: 0;
+  max-height: 0;
+  display: block;
+  overflow: hidden;
+  opacity: 0;
 }
