--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -16,18 +16,18 @@
 @import "O2_Organismes/O_ContentFooter.css";
 @import "O2_Organismes/O_UserMenu.css";
 @import "O2_Organismes/O_MenuItem.css";
-@import "O2_Organismes/O_LastMenu.css";
-@import "O2_Organismes/O_LastMenuItem.css";
+@import "O2_Organismes/O_Pagination.css";
+
 
 
 @import "O3_Molecules/M_UserMenuDropdown.css";
 @import "O3_Molecules/M_Submenu.css";
-@import "O3_Molecules/M_FooterButton.css";
+@import "O3_Molecules/M_PaginationPages.css";
 
 @import "O4_Atoms/A_MenubarLink.css";
 @import "O4_Atoms/A_UserIcon.css";
 @import "O4_Atoms/A_DropdownMenuItem.css";
 @import "O4_Atoms/A_MenuItemButtom.css";
 @import "O4_Atoms/A_SubmenuItem.css";
-@import "O4_Atoms/A_FooterItem.css";
-@import "O4_Atoms/A_LastMenuItemButton.css";
+@import "O4_Atoms/A_ActionButton.css";
+@import "O4_Atoms/A_PaginationButton page.css";
