--- a/stylesheets/O2_Organismes/O_Sidebar.css
+++ b/stylesheets/O2_Organismes/O_Sidebar.css
@@ -1,11 +1,16 @@
-.T_SinglePageUI .O_Sidebar {
+.O_Sidebar {
   position: fixed;
   display: flex;
-  flex-direction: column;
-  width: 300px;
-  height: 100%;
-  border-right: 1px solid rgba(0,0,0,.1);
-  background-color: white;
-  z-index: 100;
   box-sizing: border-box;
+  flex-direction: column;
+
+  width: var(--full-sidebar-width);
+  height: 100%;
+  background-color: white;
+  border-right: 1px solid var(--gray);
+  z-index: 100;
+}
+
+.T_SinglePageUI.compact .O_Sidebar {
+  width: var(--compact-sidebar-width);
 }
