--- a/stylesheets/O2_Organismes/O_SidebarFooter.css
+++ b/stylesheets/O2_Organismes/O_SidebarFooter.css
@@ -1,6 +1,8 @@
 .O_SidebarFooter {
   width: 100%;
-  flex: 0 0 70px;
+  padding: 10px 0;
+  flex: 0 0 50px;
+  overflow: hidden;
   border-top: 1px solid var(--gray);
   z-index: 10;
 }
