--- a/stylesheets/O4_Atoms/A_DropdownMenuItem.css
+++ b/stylesheets/O4_Atoms/A_DropdownMenuItem.css
@@ -8,3 +8,8 @@
 .A_DropdownMenuItem:hover {
   background-color: var(--bg-gray);
 }
+
+.A_DropdownMenuItem.active {
+  font-weight: 400px;
+  color: var(--text-gray);
+}
